Fix overflow bug

--- a/sevenam-db/src/components/About/About.css
+++ b/sevenam-db/src/components/About/About.css
@@ -1,6 +1,3 @@
-body {
-  overflow: auto;
-}
 .intoduction h1 {
   padding: 30px 10px 10px 10px;
   text-align: center;
