--- a/sevenam-db/src/components/navbar/NavbarNew.css
+++ b/sevenam-db/src/components/navbar/NavbarNew.css
@@ -1,6 +1,6 @@
 nav {
   margin-bottom: 2px;
-  height: 1.5cm;
+  height: 5%;
   display: flex;
   justify-content: space-between;
   align-content: space-between;
